--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Candal&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
- 
-* {
-    margin: o;
+ * {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
@@ -45,14 +44,12 @@ body {
     background: var(--bg-color);
 }
 
-
-
-
 .logo {
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
 }
+
 .navbar a {
     font-size: 1.7rem;
     color: var(--text-color);
@@ -60,6 +57,7 @@ body {
     margin-left: 3.5rem;
     transition: 3s;
 }
+
 .navbar a:hover,
 .navbar a.active {
     color: var(--main-color);
@@ -71,7 +69,6 @@ body {
     cursor: pointer;
     display: none;
 }
-
 
 section {
     min-height: 100vh;
@@ -85,6 +82,7 @@ section {
     background: url('/image/jj.png') no-repeat;
     background-size: 350px;
     background-position: right;
+    position: relative;
 }
 
 .home-content {
@@ -96,6 +94,7 @@ section {
     font-weight: 700;
     line-height: 1.3;
 }
+
 .home-content h1 span {
     color: var(--text-color);
 }
@@ -106,10 +105,10 @@ section {
 }
 
 .home-content .text-animate h3 {
-   font-size: 3.2rem;
-   font-weight: 700;
-   color: transparent;
-   -webkit-text-stroke: .7px var(--main-color);
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: transparent;
+    -webkit-text-stroke: .7px var(--main-color);
 }
 
 .home-content p {
@@ -123,6 +122,7 @@ section {
     justify-content: space-between;
     width: 34.5rem;
     height: 5rem;
+    margin-right: 20px; /* Add margin-right to create space between .btn-box and .home-sci */
 }
 
 .btn-box .btn {
@@ -144,10 +144,10 @@ section {
     transition: .5s;
 }
 
-
 .btn-box .btn:hover {
     color: var(--main-color);
 }
+
 .btn-box .btn:nth-child(2) {
     background: transparent;
     color: var(--main-color);
@@ -156,6 +156,7 @@ section {
 .btn-box .btn:nth-child(2):hover {
     color: var(--bg-color);
 }
+
 .btn-box .btn:nth-child(2)::before {
     background: var(--main-color);
 }
@@ -173,15 +174,16 @@ section {
 }
 
 .btn-box .btn:hover::before {
-width: 100%;
+    width: 100%;
 }
 
 .home-sci {
-position: absolute;
-bottom: 4rem;
-width: 170px;
-display: flex;
-justify-content: space-between;
+    position: absolute;
+    bottom: 4rem;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 20px; /* Add margin-right to create space between .home-sci and .btn-box */
 }
 
 .home-sci a {
@@ -200,12 +202,10 @@ justify-content: space-between;
     overflow: hidden;
     transition: .5s;
 }
+
 .home-sci a:hover {
     color: var(--bg-color);
 }
-
-
-
 
 .home-sci a::before {
     content: '';
@@ -223,10 +223,7 @@ justify-content: space-between;
     width: 100%;
 }
 
-
-
-
-.home-imgHover{
+.home-imgHover {
     position: absolute;
     top: 0;
     right: 0;
@@ -240,6 +237,9 @@ justify-content: space-between;
     background: var(--bg-color);
     opacity: .8;
 }
+
+
+
 
 .about {
     display: flex;
